# lorem

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: test-deploy.yaml
app/: dependencies.py  exceptions.py  filters.py  main.py  paginator.py  schemas.py  token.py
app/core/: dependencies.py  exceptions.py  schemas.py  tokens.py  utils.py  validators.py
app/faker/: __init__.py  routers.py  schema.json  schemas.py  services.py
app/filters/: __init__.py  converters.py  dependencies.py  exceptions.py  facades.py  models.py
app/indexes/: routers.py  schemas.py
app/repositories/: collection.py
app/resources/: repositories.py  routers.py
app/routers/: collection.py  faker.py  indexes.py  resources.py  tokens.py  versions.py
app/schemas/: __init__.py  camel.py  faker.py  indexes.py  paginated.py  tokens.py
app/services/: faker.py
app/tokens/: routers.py  schemas.py  services.py
app/versions/: routers.py
tests/: test_app_is_alive.py
tests/filters/: test_and.py  test_equals.py  test_filter.py  test_in.py  test_not_equals.py  test_or.py
