[tool.poetry]
name = "lorem"
version = "0.1.0"
description = "Lorem: A MockAPI using FastAPI and MongoDB"
authors = ["Daniel Pinto <d.pinto@kigroup.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
motor = "^3.1.1"
anyio = "^3.6.2"
pydantic = "^1.10.4"
pyhumps = "^3.8.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
