[tool.poetry]
name = "lorem"
version = "0.1.0"
description = "Lorem: A MockAPI using FastAPI and MongoDB"
authors = ["Daniel Pinto <d.pinto@kigroup.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
motor = "^3.4.0"
anyio = "^4.3.0"
pydantic = "^2.6.4"
pyhumps = "^3.8.0"
faker = "^24.4.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
